@@ -1,1 +1,2 @@
 DIST ovirt-host-deploy-1.0.1.tar.gz 410147 SHA256 6ee771cde3198c8cc1726a782474762f783eeb6e7a0c85809a269ae10d2cd51a SHA512 00d353a94c1f47b14fd00dc1dea8490bc633292895deeaea024897d1efbd70438d664d89563ec2737749ebe349a0b3bc970ca98ff05c459f56e3d7638244c39d WHIRLPOOL 9708d98f33b524e747c126630d3cb348913ee1232f841a6f1c048b194a5bb7d36ed077f2931278e0446ad504dcaa83c782cee145170bb8ee33d0cb7dc4217bd4
+DIST ovirt-host-deploy-1.1.0.tar.gz 240686 SHA256 7395aa3c116e30aa1bed0ba350bec67f72992f45a04be39f4fd6533e8bbe1cb3 SHA512 97db67cfa6e436d2da818307ff1ece6e1905c6b6a52fe627592b5dbd91a8c6a860e4194c1951eadbb5b53b7e8643e92ebd9804b54d3b83dd082f979e012cc4a8 WHIRLPOOL 4f9a1a7d16ae0bc9fe6ec950a8ae424bca6574f5e02d04cc8914150fffd5d1e5a86eaa9acfa56ab467095c20922c356c6947361ddd7a53a09f5009b3eca559e5
